# gospel

./: .gitignore  .pre-commit-config.yaml  ACES_VBQC.ipynb  ACES_VBQC_small_BWS.ipynb  ACES_test.ipynb  README.md  VBQC_demom.ipynb  VQD_noise_model.ipynb  check_sampling_consistency.py  harold.csv  minimize_space.ipynb  nohup.out  p0.01-raw.json  p0.01.json  pyproject.toml  requirements.txt  slurm-3933750.out  slurm-3933751.out  slurm-3933752.out  slurm-3933757.out  slurm-3933761.out  slurm-3933762.out  slurm-3933763.out  slurm-3933764.out  slurm-3933765.out  slurm-3933766.out  slurm-3933767.out  slurm-3933768.out  slurm-3933769.out  slurm-3933770.out  slurm-3933771.out  slurm-3933772.out  slurm-3933773.out  slurm-3933774.out  slurm-3933775.out  slurm-3933776.out  slurm-3933777.out  slurm-3933778.out  slurm-3933779.out  slurm-3933780.out  (+279 more)
DEPOL-outcomes-n5/: final-summary.csv
STRONG-outcomes-n5/: STRONG-p0.5.json  final-summary.csv  summary-p0.01.csv  summary-p0.05.csv  summary-p0.1.csv  summary-p0.15.csv  summary-p0.18.csv  summary-p0.2.csv  summary-p0.3.csv  summary-p0.4.csv  summary-p0.5.csv  summary-p0.7.csv
UNCOR_DEPOL-outcomes-n5/: final-summary.csv
UNCOR_DEPOL-outcomes-n5-d30/: final-summary.csv
brickwork_state_transpiler/: __init__.py  brickwork_state_transpiler.py
data/: NVNoise.json
pages/: brickwork_state_graph.js  index.html  renderTable.js  style.css
pages.meta/: Dockerfile  index.html  setup_ci_user.sh  setup_env.sh  setup_miniconda.sh
sampling_circuits/: __init__.py  experiments.py  sample_circuits.py  sampling_circuits.py
(+89 files in other folders)
